Правка ошибки в названии класса

--- a/css/style.css
+++ b/css/style.css
@@ -537,7 +537,7 @@ a {
 
 /* стилизация блока информации подсписка третьего элемента */
 
-.sub-advantages-3 {
+.sub-advantage-3 {
   width: 274px;
 }
 
