--- a/css/style.css
+++ b/css/style.css
@@ -360,11 +360,10 @@ a {
 
 .main-background:before {
   position: absolute;
-  top: 452px;
-  left: 0px;
+  bottom: -2px;
 
-  width: 1201px;
-  height: 59px;
+  width: 100%;
+  height: 58px;
 
   background-image: url("../img/polygon.svg");
   background-repeat: no-repeat;
@@ -788,9 +787,9 @@ a {
 .book-form {
   position: absolute;
 
-  display: none;
   padding: 55px;
 
+  opacity: 0;
   background-color: #ffffff;
   -webkit-box-shadow: 0 7px 15px 0 rgba(0, 0, 0, 0.15);
           box-shadow: 0 7px 15px 0 rgba(0, 0, 0, 0.15);
@@ -799,14 +798,35 @@ a {
 /* свойство, отвечающее за показ формы */
 
 .modal-show {
-  display: block;
+  z-index: 1;
+
+  opacity: 1;
 
   -webkit-animation: falling-out 0.8s;
 
           animation: falling-out 0.8s;
 }
 
-/* анимация формы */
+/* свойство, отвечающее за исчезание формы */
+
+.modal-hide {
+  z-index: -1;
+
+  -webkit-transition-duration: 1s;
+
+       -o-transition-duration: 1s;
+
+          transition-duration: 1s;
+  -webkit-transition-property: z-index;
+  -o-transition-property: z-index;
+  transition-property: z-index;
+
+  -webkit-animation: fall-back 0.8s;
+
+          animation: fall-back 0.8s;
+}
+
+/* анимация выпадания формы */
 
 @-webkit-keyframes falling-out {
   0% {
@@ -822,13 +842,59 @@ a {
 
 @keyframes falling-out {
   0% {
+    opacity: 0;
+
     -webkit-transform: translateY(-86px);
             transform: translateY(-86px);
   }
 
+  50% {
+    opacity: 0.5;
+  }
+
   100% {
+    opacity: 1;
+
     -webkit-transform: translateY(0);
             transform: translateY(0);
+  }
+}
+
+/* обратная анимация для формы */
+
+@-webkit-keyframes fall-back {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 0;
+
+    -webkit-transform: translateY(-86px);
+
+            transform: translateY(-86px);
+  }
+}
+
+@keyframes fall-back {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 0;
+
+    -webkit-transform: translateY(-86px);
+
+            transform: translateY(-86px);
   }
 }
 
